--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -35,6 +35,11 @@ commands:
   setmessage:
     description: Sets the welcome message for the designated zone.
     usage: /setmessage <zone> <message>
+  setzoningrate:
+    description: Sets the cost of zoning per block.
+    usage: /setzoningrate <cost>
+    permission: ee.emperor
+    permission-message: You must be Emperor to use this command.
 permissions:
   ee.emperor:
     description: This permission is exclusive for Emperors
