Added deletion commands

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.ellis-matthew4</groupId>
     <artifactId>EmpireEconomy</artifactId>
-    <version>0.1</version>
+    <version>0.2-prealpha</version>
     <packaging>jar</packaging>
 
     <name>EmpireEconomy</name>
