--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -40,6 +40,14 @@ commands:
     usage: /setzoningrate <cost>
     permission: ee.emperor
     permission-message: You must be Emperor to use this command.
+  deletezone:
+    description: Deletes one of your owned zones.
+    usage: /deletezone <zone>
+  deletemoney:
+    description: Deletes currency from your balance.
+    usage: /deletemoney <amount>
+    permission: ee.emperor
+    permission-message: You must be Emperor to use this command.
 permissions:
   ee.emperor:
     description: This permission is exclusive for Emperors
